// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox deve conter a classe css "disabled" 1`] = `
<label>
  <input
    disabled=""
    type="checkbox"
  />
  <span />
  <span>
    check
  </span>
</label>
`;

exports[`Checkbox deve renderizar corretamente 1`] = `
<label>
  <input
    type="checkbox"
  />
  <span />
  <span>
    check
  </span>
</label>
`;
